--- a/Tools/CISupport/ews-build/config.json
+++ b/Tools/CISupport/ews-build/config.json
@@ -57,37 +57,37 @@
     { "name": "wincairo-ews-002", "platform": "win" },
     { "name": "wincairo-ews-003", "platform": "win" },
     { "name": "wincairo-ews-004", "platform": "win" },
-    { "name": "ews100", "platform": "mac-ventura" },
-    { "name": "ews101", "platform": "mac-ventura" },
-    { "name": "ews102", "platform": "mac-ventura" },
-    { "name": "ews103", "platform": "mac-ventura" },
-    { "name": "ews104", "platform": "mac-ventura" },
-    { "name": "ews105", "platform": "mac-ventura" },
-    { "name": "ews106", "platform": "mac-ventura" },
-    { "name": "ews107", "platform": "mac-ventura" },
+    { "name": "ews100", "platform": "mac-sonoma" },
+    { "name": "ews101", "platform": "mac-sonoma" },
+    { "name": "ews102", "platform": "mac-sonoma" },
+    { "name": "ews103", "platform": "mac-sonoma" },
+    { "name": "ews104", "platform": "mac-sonoma" },
+    { "name": "ews105", "platform": "mac-sonoma" },
+    { "name": "ews106", "platform": "mac-sonoma" },
+    { "name": "ews107", "platform": "mac-sonoma" },
     { "name": "ews108", "platform": "*" },
     { "name": "ews109", "platform": "ios-18" },
     { "name": "ews110", "platform": "ios-simulator-18" },
     { "name": "ews111", "platform": "ios-simulator-18" },
-    { "name": "ews112", "platform": "mac-ventura" },
-    { "name": "ews113", "platform": "mac-ventura" },
+    { "name": "ews112", "platform": "mac-sonoma" },
+    { "name": "ews113", "platform": "mac-sonoma" },
     { "name": "ews114", "platform": "*" },
-    { "name": "ews115", "platform": "mac-ventura" },
-    { "name": "ews116", "platform": "mac-ventura" },
-    { "name": "ews117", "platform": "mac-ventura" },
-    { "name": "ews118", "platform": "mac-ventura" },
-    { "name": "ews119", "platform": "mac-ventura" },
-    { "name": "ews120", "platform": "mac-ventura" },
-    { "name": "ews129", "platform": "mac-ventura" },
-    { "name": "ews169", "platform": "mac-ventura" },
+    { "name": "ews115", "platform": "mac-sonoma" },
+    { "name": "ews116", "platform": "mac-sonoma" },
+    { "name": "ews117", "platform": "mac-sonoma" },
+    { "name": "ews118", "platform": "mac-sonoma" },
+    { "name": "ews119", "platform": "mac-sonoma" },
+    { "name": "ews120", "platform": "mac-sonoma" },
+    { "name": "ews129", "platform": "mac-sonoma" },
+    { "name": "ews169", "platform": "mac-sonoma" },
     { "name": "ews121", "platform": "ios-simulator-18" },
     { "name": "ews122", "platform": "ios-simulator-18" },
     { "name": "ews123", "platform": "ios-simulator-18" },
     { "name": "ews124", "platform": "ios-simulator-18" },
     { "name": "ews125", "platform": "ios-simulator-18" },
     { "name": "ews126", "platform": "ios-simulator-18" },
-    { "name": "ews127", "platform": "mac-ventura" },
-    { "name": "ews128", "platform": "mac-ventura" },
+    { "name": "ews127", "platform": "mac-sonoma" },
+    { "name": "ews128", "platform": "mac-sonoma" },
     { "name": "ews130", "platform": "*" },
     { "name": "ews131", "platform": "ios-18" },
     { "name": "ews132", "platform": "*" },
@@ -99,15 +99,15 @@
     { "name": "ews138", "platform": "*" },
     { "name": "ews139", "platform": "*" },
     { "name": "ews140", "platform": "*" },
-    { "name": "ews141", "platform": "mac-ventura" },
-    { "name": "ews142", "platform": "mac-ventura" },
-    { "name": "ews143", "platform": "mac-ventura" },
-    { "name": "ews144", "platform": "mac-ventura" },
-    { "name": "ews145", "platform": "mac-ventura" },
-    { "name": "ews146", "platform": "mac-ventura" },
-    { "name": "ews147", "platform": "mac-ventura" },
-    { "name": "ews148", "platform": "mac-ventura" },
-    { "name": "ews149", "platform": "mac-ventura" },
+    { "name": "ews141", "platform": "mac-sonoma" },
+    { "name": "ews142", "platform": "mac-sonoma" },
+    { "name": "ews143", "platform": "mac-sonoma" },
+    { "name": "ews144", "platform": "mac-sonoma" },
+    { "name": "ews145", "platform": "mac-sonoma" },
+    { "name": "ews146", "platform": "mac-sonoma" },
+    { "name": "ews147", "platform": "mac-sonoma" },
+    { "name": "ews148", "platform": "mac-sonoma" },
+    { "name": "ews149", "platform": "mac-sonoma" },
     { "name": "ews150", "platform": "*" },
     { "name": "ews151", "platform": "*", "max_builds": 3 },
     { "name": "ews152", "platform": "*" },
@@ -119,8 +119,8 @@
     { "name": "ews158", "platform": "*" },
     { "name": "ews159", "platform": "*" },
     { "name": "ews160", "platform": "*" },
-    { "name": "ews161", "platform": "mac-ventura" },
-    { "name": "ews162", "platform": "mac-ventura" },
+    { "name": "ews161", "platform": "mac-sonoma" },
+    { "name": "ews162", "platform": "mac-sonoma" },
     { "name": "ews163", "platform": "*" },
     { "name": "ews164", "platform": "*" },
     { "name": "ews165", "platform": "*" },
@@ -138,15 +138,15 @@
     { "name": "ews178", "platform": "mac-sequoia" },
     { "name": "ews179", "platform": "mac-sequoia" },
     { "name": "ews180", "platform": "mac-sequoia" },
-    { "name": "ews181", "platform": "mac-ventura" },
-    { "name": "ews182", "platform": "mac-ventura" },
+    { "name": "ews181", "platform": "mac-sonoma" },
+    { "name": "ews182", "platform": "mac-sonoma" },
     { "name": "ews183", "platform": "*" },
     { "name": "ews184", "platform": "ios-simulator-18" },
     { "name": "ews185", "platform": "ios-simulator-18" },
-    { "name": "ews186", "platform": "mac-ventura" },
-    { "name": "ews187", "platform": "mac-ventura" },
-    { "name": "ews188", "platform": "mac-ventura" },
-    { "name": "ews189", "platform": "mac-ventura" },
+    { "name": "ews186", "platform": "mac-sonoma" },
+    { "name": "ews187", "platform": "mac-sonoma" },
+    { "name": "ews188", "platform": "mac-sonoma" },
+    { "name": "ews189", "platform": "mac-sonoma" },
     { "name": "ews190", "platform": "ios-simulator-18" },
     { "name": "ews191", "platform": "ios-simulator-18" },
     { "name": "ews192", "platform": "ios-simulator-18" },
@@ -156,11 +156,11 @@
     { "name": "ews196", "platform": "ios-simulator-18" },
     { "name": "ews197", "platform": "ios-simulator-18" },
     { "name": "ews198", "platform": "ios-simulator-18" },
-    { "name": "ews200", "platform": "mac-ventura" },
-    { "name": "ews201", "platform": "mac-ventura" },
-    { "name": "ews202", "platform": "mac-ventura" },
-    { "name": "ews203", "platform": "mac-ventura" },
-    { "name": "ews204", "platform": "mac-ventura" },    
+    { "name": "ews200", "platform": "mac-sonoma" },
+    { "name": "ews201", "platform": "mac-sonoma" },
+    { "name": "ews202", "platform": "mac-sonoma" },
+    { "name": "ews203", "platform": "mac-sonoma" },
+    { "name": "ews204", "platform": "mac-sonoma" },    
     { "name": "ews216", "platform": "visionos-2" },
     { "name": "ews217", "platform": "visionos-2" },
     { "name": "ews218", "platform": "visionos-2" },
@@ -188,8 +188,8 @@
     { "name": "ews248", "platform": "mac-sequoia" },
     { "name": "ews249", "platform": "mac-sequoia" },
     { "name": "ews250", "platform": "mac-sequoia" },
-    { "name": "ews251", "platform": "mac-ventura"},
-    { "name": "ews252", "platform": "mac-ventura"},
+    { "name": "ews251", "platform": "mac-sonoma"},
+    { "name": "ews252", "platform": "mac-sonoma"},
     { "name": "ews253", "platform": "*", "max_builds": 3 },
     { "name": "ews254", "platform": "ios-simulator-18" },
     { "name": "ews255", "platform": "ios-simulator-18" },
@@ -197,11 +197,11 @@
     { "name": "ews257", "platform": "ios-simulator-18" },
     { "name": "ews258", "platform": "ios-simulator-18" },
     { "name": "ews259", "platform": "ios-simulator-18" },
-    { "name": "webkit-cq-01", "platform": "mac-ventura" },
-    { "name": "webkit-cq-02", "platform": "mac-ventura" },
-    { "name": "webkit-cq-03", "platform": "mac-ventura" },
-    { "name": "webkit-cq-04", "platform": "mac-ventura" },
-    { "name": "webkit-cq-05", "platform": "mac-ventura" }
+    { "name": "webkit-cq-01", "platform": "mac-sonoma" },
+    { "name": "webkit-cq-02", "platform": "mac-sonoma" },
+    { "name": "webkit-cq-03", "platform": "mac-sonoma" },
+    { "name": "webkit-cq-04", "platform": "mac-sonoma" },
+    { "name": "webkit-cq-05", "platform": "mac-sonoma" }
   ],
   "builders": [
     {
@@ -272,38 +272,38 @@
       "workernames": ["ews138", "ews139", "ews140", "ews175", "ews176", "ews177", "ews178", "ews179", "ews180"]
     },
     {
-      "name": "macOS-Ventura-Release-Build-EWS", "shortname": "mac", "icon": "buildOnly",
-      "factory": "macOSBuildFactory", "platform": "mac-ventura",
+      "name": "macOS-Sonoma-Release-Build-EWS", "shortname": "mac", "icon": "buildOnly",
+      "factory": "macOSBuildFactory", "platform": "mac-sonoma",
       "configuration": "release", "architectures": ["x86_64", "arm64"],
-      "triggers": ["api-tests-mac-ews", "macos-ventura-release-wk1-tests-ews", "macos-ventura-release-wk2-tests-ews", "macos-ventura-release-wk2-intel-tests-ews", "macos-release-wk2-stress-tests-ews"],
+      "triggers": ["api-tests-mac-ews", "macos-sonoma-release-wk1-tests-ews", "macos-sonoma-release-wk2-tests-ews", "macos-sonoma-release-wk2-intel-tests-ews", "macos-release-wk2-stress-tests-ews"],
       "workernames": ["ews101", "ews102", "ews103", "ews105","ews118", "ews119", "ews120", "ews141", "ews161", "ews162"]
     },
     {
-      "name": "macOS-Ventura-Release-WK1-Tests-EWS", "shortname": "mac-wk1", "icon": "testOnly",
-      "factory": "macOSWK1Factory", "platform": "mac-ventura",
+      "name": "macOS-Sonoma-Release-WK1-Tests-EWS", "shortname": "mac-wk1", "icon": "testOnly",
+      "factory": "macOSWK1Factory", "platform": "mac-sonoma",
       "configuration": "release",
-      "triggered_by": ["macos-ventura-release-build-ews"],
+      "triggered_by": ["macos-sonoma-release-build-ews"],
       "workernames": ["ews116", "ews112", "ews117", "ews144", "ews145", "ews146", "ews147", "ews148"]
     },
     {
-      "name": "macOS-Ventura-Release-WK2-Tests-EWS", "shortname": "mac-wk2", "icon": "testOnly",
-      "factory": "macOSWK2Factory", "platform": "mac-ventura",
+      "name": "macOS-Sonoma-Release-WK2-Tests-EWS", "shortname": "mac-wk2", "icon": "testOnly",
+      "factory": "macOSWK2Factory", "platform": "mac-sonoma",
       "configuration": "release",
-      "triggered_by": ["macos-ventura-release-build-ews"],
+      "triggered_by": ["macos-sonoma-release-build-ews"],
       "workernames": ["ews104", "ews106", "ews107", "ews113", "ews115", "ews149", "ews169", "ews186", "ews187", "ews188", "ews189"]
     },
     {
-      "name": "macOS-Ventura-Release-WK2-Intel-Tests-EWS", "shortname": "mac-intel-wk2", "icon": "testOnly",
-      "factory": "macOSWK2Factory", "platform": "mac-ventura",
+      "name": "macOS-Sonoma-Release-WK2-Intel-Tests-EWS", "shortname": "mac-intel-wk2", "icon": "testOnly",
+      "factory": "macOSWK2Factory", "platform": "mac-sonoma",
       "configuration": "release",
-      "triggered_by": ["macos-ventura-release-build-ews"],
+      "triggered_by": ["macos-sonoma-release-build-ews"],
       "workernames": ["ews200", "ews201", "ews202", "ews203", "ews204"]
     },
     {
       "name": "macOS-Release-WK2-Stress-Tests-EWS", "shortname": "mac-wk2-stress", "icon": "testOnly",
-      "factory": "StressTestFactory", "platform": "mac-ventura",
+      "factory": "StressTestFactory", "platform": "mac-sonoma",
       "configuration": "release",
-      "triggered_by": ["macos-ventura-release-build-ews"],
+      "triggered_by": ["macos-sonoma-release-build-ews"],
       "workernames": ["ews181", "ews182"]
     },
     {
@@ -400,13 +400,13 @@
     },
     {
       "name": "JSC-Tests-EWS", "shortname": "jsc", "icon": "buildAndTest",
-      "factory": "JSCBuildAndTestsFactory", "platform": "mac-ventura",
+      "factory": "JSCBuildAndTestsFactory", "platform": "mac-sonoma",
       "configuration": "release", "runTests": "true",
       "workernames": ["ews127", "ews128", "ews251", "ews252"]
     },
     {
       "name": "JSC-Tests-arm64-EWS", "shortname": "jsc-arm64", "icon": "buildAndTest",
-      "factory": "JSCBuildAndTestsFactory", "platform": "mac-ventura",
+      "factory": "JSCBuildAndTestsFactory", "platform": "mac-sonoma",
       "configuration": "release", "runTests": "true",
       "workernames": ["ews136", "ews137"]
     },
@@ -446,8 +446,8 @@
     },
     {
       "name": "API-Tests-macOS-EWS", "shortname": "api-mac", "icon": "testOnly",
-      "factory": "APITestsFactory", "platform": "mac-ventura",
-      "triggered_by": ["macos-ventura-release-build-ews"],
+      "factory": "APITestsFactory", "platform": "mac-sonoma",
+      "triggered_by": ["macos-sonoma-release-build-ews"],
       "workernames": ["ews100", "ews129", "ews142", "ews143", "ews150", "ews153", "ews155"]
     },
     {
@@ -471,19 +471,19 @@
     },
     {
       "name": "Commit-Queue", "shortname": "commit", "icon": "buildAndTest",
-      "factory": "CommitQueueFactory", "platform": "mac-ventura",
+      "factory": "CommitQueueFactory", "platform": "mac-sonoma",
       "configuration": "release", "architectures": ["arm64"],
       "workernames": ["webkit-cq-01", "webkit-cq-02", "webkit-cq-03", "webkit-cq-05"]
     },
     {
       "name": "Merge-Queue", "shortname": "merge", "icon": "buildAndTest",
-      "factory": "MergeQueueFactory", "platform": "mac-ventura",
+      "factory": "MergeQueueFactory", "platform": "mac-sonoma",
       "configuration": "release", "architectures": ["arm64"],
       "workernames": ["webkit-cq-01", "webkit-cq-02", "webkit-cq-03", "webkit-cq-05"]
     },
     {
       "name": "Unsafe-Merge-Queue", "shortname": "unsafe-merge", "icon": "buildAndTest",
-      "factory": "UnsafeMergeQueueFactory", "platform": "mac-ventura",
+      "factory": "UnsafeMergeQueueFactory", "platform": "mac-sonoma",
       "configuration": "release", "architectures": ["arm64"],
       "workernames": ["webkit-cq-01", "webkit-cq-02", "webkit-cq-03", "webkit-cq-04", "webkit-cq-05"]
     },
@@ -499,7 +499,7 @@
       "builderNames": [
             "Apply-WatchList-EWS", "Bindings-Tests-EWS", "GTK-Build-EWS", "iOS-18-Build-EWS", "iOS-18-Simulator-Build-EWS",
             "JSC-ARMv7-32bits-Build-EWS", "JSC-Tests-EWS", "JSC-Tests-arm64-EWS",
-            "macOS-Sequoia-Debug-Build-EWS", "macOS-Ventura-Release-Build-EWS", "macOS-Safer-CPP-Checks-EWS",
+            "macOS-Sequoia-Debug-Build-EWS", "macOS-Sonoma-Release-Build-EWS", "macOS-Safer-CPP-Checks-EWS",
             "Services-EWS", "Style-EWS", "tvOS-18-Build-EWS", "tvOS-18-Simulator-Build-EWS", "visionOS-2-Build-EWS", "visionOS-2-Simulator-Build-EWS",
             "watchOS-11-Build-EWS", "watchOS-11-Simulator-Build-EWS", "WPE-Build-EWS", "WebKitPerl-Tests-EWS", "WebKitPy-Tests-EWS", "PlayStation-Build-EWS", "Win-Build-EWS",
             "WPE-Cairo-Build-EWS"
@@ -514,7 +514,7 @@
       "builderNames": [
             "Bindings-Tests-EWS", "GTK-Build-EWS", "iOS-18-Build-EWS", "iOS-18-Simulator-Build-EWS",
             "JSC-ARMv7-32bits-Build-EWS", "JSC-Tests-EWS", "JSC-Tests-arm64-EWS",
-            "macOS-Sequoia-Debug-Build-EWS", "macOS-Ventura-Release-Build-EWS", "macOS-Safer-CPP-Checks-EWS",
+            "macOS-Sequoia-Debug-Build-EWS", "macOS-Sonoma-Release-Build-EWS", "macOS-Safer-CPP-Checks-EWS",
             "Services-EWS", "Style-EWS", "Style-EWS", "tvOS-18-Build-EWS", "tvOS-18-Simulator-Build-EWS", "visionOS-2-Build-EWS", "visionOS-2-Simulator-Build-EWS",
             "watchOS-11-Build-EWS", "watchOS-11-Simulator-Build-EWS", "WPE-Build-EWS", "WebKitPerl-Tests-EWS", "WebKitPy-Tests-EWS", "PlayStation-Build-EWS", "Win-Build-EWS",
             "WPE-Cairo-Build-EWS"
@@ -533,20 +533,20 @@
       "builderNames": ["Safe-Merge-Queue"]
     },
     {
-      "type": "Triggerable", "name": "macos-ventura-release-build-ews",
-      "builderNames": ["macOS-Ventura-Release-Build-EWS"]
+      "type": "Triggerable", "name": "macos-sonoma-release-build-ews",
+      "builderNames": ["macOS-Sonoma-Release-Build-EWS"]
     },
     {
-      "type": "Triggerable", "name": "macos-ventura-release-wk1-tests-ews",
-      "builderNames": ["macOS-Ventura-Release-WK1-Tests-EWS"]
+      "type": "Triggerable", "name": "macos-sonoma-release-wk1-tests-ews",
+      "builderNames": ["macOS-Sonoma-Release-WK1-Tests-EWS"]
     },
     {
-      "type": "Triggerable", "name": "macos-ventura-release-wk2-tests-ews",
-      "builderNames": ["macOS-Ventura-Release-WK2-Tests-EWS"]
+      "type": "Triggerable", "name": "macos-sonoma-release-wk2-tests-ews",
+      "builderNames": ["macOS-Sonoma-Release-WK2-Tests-EWS"]
     },
     {
-      "type": "Triggerable", "name": "macos-ventura-release-wk2-intel-tests-ews",
-      "builderNames": ["macOS-Ventura-Release-WK2-Intel-Tests-EWS"]
+      "type": "Triggerable", "name": "macos-sonoma-release-wk2-intel-tests-ews",
+      "builderNames": ["macOS-Sonoma-Release-WK2-Intel-Tests-EWS"]
     },
     {
       "type": "Triggerable", "name": "macos-release-wk2-stress-tests-ews",
