Unreviewed, fix the tvOS engineering build
Enable `USE_PDFKIT_FOR_TESTING` on tvOS, so that API tests build after enabling unified PDF support.
Additionally (weak) link against PDFKit in API tests.

* Tools/TestWebKitAPI/Configurations/TestWebKitAPIBase.xcconfig:
* Tools/TestWebKitAPI/config.h:

Canonical link: https://commits.webkit.org/290750@main

--- a/Tools/TestWebKitAPI/Configurations/TestWebKitAPIBase.xcconfig
+++ b/Tools/TestWebKitAPI/Configurations/TestWebKitAPIBase.xcconfig
@@ -80,6 +80,8 @@ WK_PDFKIT_LDFLAGS_iphoneos = -framework PDFKit;
 WK_PDFKIT_LDFLAGS_iphonesimulator = -framework PDFKit;
 WK_PDFKIT_LDFLAGS_xros = -framework PDFKit;
 WK_PDFKIT_LDFLAGS_xrsimulator = -framework PDFKit;
+WK_PDFKIT_LDFLAGS_appletvos = -weak_framework PDFKit;
+WK_PDFKIT_LDFLAGS_appletvsimulator = -weak_framework PDFKit;
 
 WK_SYSTEM_LDFLAGS = $(WK_SYSTEM_LDFLAGS_$(WK_PLATFORM_NAME));
 WK_SYSTEM_LDFLAGS_macosx = -framework System;
