Add WebCore::PlatformDynamicRangeLimit https://bugs.webkit.org/show_bug.cgi?id=287776 rdar://144952110
Reviewed by Simon Fraser.

PlatformDynamicRangeLimit interprets the `dynamic-range-limit`
CSS property, and stores it in a single [0,1] float.

Combined changes:
* Source/WebCore/Headers.cmake:
* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/platform/graphics/PlatformDynamicRangeLimit.cpp: Added.
(WebCore::PlatformDynamicRangeLimit::normalizedAverage):
(WebCore::operator<<):
* Source/WebCore/platform/graphics/PlatformDynamicRangeLimit.h: Added.
(WebCore::PlatformDynamicRangeLimit::standard):
(WebCore::PlatformDynamicRangeLimit::constrainedHigh):
(WebCore::PlatformDynamicRangeLimit::noLimit):
(WebCore::PlatformDynamicRangeLimit::value const):
(WebCore::PlatformDynamicRangeLimit::PlatformDynamicRangeLimit):
* Source/WebCore/style/values/color/StyleDynamicRangeLimit.cpp:
(WebCore::Style::DynamicRangeLimit::toPlatformDynamicRangeLimit const):
* Source/WebCore/style/values/color/StyleDynamicRangeLimit.h:
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:
* Tools/TestWebKitAPI/CMakeLists.txt:
* Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* Tools/TestWebKitAPI/Tests/WebCore/PlatformDynamicRangeLimitTests.cpp: Added.
(TestWebKitAPI::TEST(PlatformDynamicRangeLimit, DefaultConstruction)):
(TestWebKitAPI::mix):
(TestWebKitAPI::TEST(PlatformDynamicRangeLimit, FromStyleDynamicRangeLimit)):
(TestWebKitAPI::TEST(PlatformDynamicRangeLimit, StaticValues)):
(TestWebKitAPI::TEST(PlatformDynamicRangeLimit, FromNonsense)):
(TestWebKitAPI::TEST(PlatformDynamicRangeLimit, Comparisons)):

Canonical link: https://commits.webkit.org/290795@main

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -1836,6 +1836,10 @@ enum class WebCore::ContentsFormat : uint8_t {
 #endif
 };
 
+class WebCore::PlatformDynamicRangeLimit {
+    float m_value;
+};
+
 enum class WebCore::RotationDirection : bool
 
 #if ENABLE(CONTENT_FILTERING)
