Silence syscall sandbox violations https://bugs.webkit.org/show_bug.cgi?id=288251 rdar://144654297
Reviewed by Chris Dumez.

Silence some yscall sandbox violations in the WebContent and Networking process that we have
never allowed.

* Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.Networking.sb.in:
* Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb.in:

Canonical link: https://commits.webkit.org/290851@main

--- a/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.Networking.sb.in
+++ b/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.Networking.sb.in
@@ -710,6 +710,8 @@
     (when (defined? 'SYS_crossarch_trap)
         (deny syscall-unix (with no-report) (syscall-number
             SYS_crossarch_trap)))
+    (deny syscall-unix (with no-report) (syscall-number
+        SYS___nexus_set_opt))
     (allow syscall-unix (syscall-number
         SYS___channel_get_info
         SYS___channel_open
